Rudi Kershaw - Replace font files with fixed below character spacing replacements.

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -7,7 +7,7 @@ tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,
 figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,
 time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-body{line-height:1.2}ol,ul{list-style:none}
+body{line-height:1.2;letter-spacing:-0.02em;}ol,ul{list-style:none}
 blockquote,q{quotes:none}
 blockquote:before,blockquote:after,q:before,q:after{content:none}
 table{border-collapse:collapse;border-spacing:0}
@@ -51,7 +51,7 @@ h3 { font-size: 24px; }
 
 p {
 	text-align: justify;
-	font-size: 19px;
+	font-size: 20px;
 	width: 780px;
 	margin: auto;	
 }
